
// Plugins necesarios para el proyecto
plugins {
    id 'java' // Plugin para compilar y empaquetar código Java
    id 'org.springframework.boot' version '3.4.2' // Plugin de Spring Boot
    id 'io.spring.dependency-management' version '1.1.7' // Gestión de dependencias

    // ⭐ SonarQube
    id "org.sonarqube" version "7.1.0.6387"
}

// Configuración del grupo y la versión del proyecto
group = 'com.musicfly'
version = '0.0.1-SNAPSHOT'

// Configuración de la versión de Java
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

// Repositorios donde buscar las dependencias
repositories {
    mavenCentral()
    maven { url "https://repo.spring.io/milestone" }
    maven { url "https://repo.spring.io/snapshot" }
}

test {
    //useJUnitPlatform()
}

// Dependencias necesarias para el proyecto
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-ldap'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.security:spring-security-test'

    runtimeOnly 'com.mysql:mysql-connector-j'

    implementation 'com.itextpdf:itext7-core:7.2.2'
    implementation 'javax.servlet:javax.servlet-api:4.0.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'org.apache.tika:tika-core:2.9.3'
    implementation 'org.apache.tika:tika-parsers:2.9.3'
    implementation 'org.bytedeco:javacv-platform:1.5.11'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'com.nimbusds:nimbus-jose-jwt'

    implementation 'org.bouncycastle:bcpkix-jdk18on:1.79'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'io.lettuce:lettuce-core:6.3.2.RELEASE'

    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.15.0'

    implementation 'org.springframework.boot:spring-boot-starter-freemarker'

    implementation platform("com.fasterxml.jackson:jackson-bom:2.17.2")

    implementation "com.fasterxml.jackson.core:jackson-databind"
    implementation "com.fasterxml.jackson.core:jackson-core"
    implementation "com.fasterxml.jackson.core:jackson-annotations"

    implementation 'ch.qos.logback:logback-classic'

    implementation "org.springframework.boot:spring-boot-starter-actuator"

    testImplementation "org.springframework.boot:spring-boot-starter-test"

    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.1"
    }
}

// Configuración para usar JUnit Platform
tasks.named('test') {
    //useJUnitPlatform()
}

// ⭐ Configuración de SonarQube
sonarqube {
  properties {
    property "sonar.projectKey", "PepeePB_proyecto-gps-25-26-gc03-microservice-users"
    property "sonar.organization", "pepeepb"
  }
}
